--- a/storm-core/src/ui/public/component.html
+++ b/storm-core/src/ui/public/component.html
@@ -102,6 +102,7 @@ $(document).ready(function() {
         var uiUser = $("#ui-user");
         $.get("/templates/user-template.html", function(template) {
             uiUser.append(Mustache.render($(template).filter("#user-template").html(),response));
+            $('#ui-user [data-toggle="tooltip"]').tooltip()
         });
 
         var componentSummary = $("#component-summary");
@@ -176,7 +177,7 @@ $(document).ready(function() {
                   ]
                 });
             }
-            componentErrors.append(Mustache.render($(template).filter("#component-errors-template").html(),formatErrorTimeSecs(response)));
+            componentErrors.append(Mustache.render($(template).filter("#component-errors-template").html(), response));
             //time, error
             dtAutoPage("#component-errors-table", {});
 
@@ -189,6 +190,12 @@ $(document).ready(function() {
                 errorCells[i].style.borderBottomColor = "#9d261d";
               }
             }
+            $('#component-summary [data-toggle="tooltip"]').tooltip();
+            $('#component-stats-detail [data-toggle="tooltip"]').tooltip();
+            $('#component-input-stats [data-toggle="tooltip"]').tooltip();
+            $('#component-output-stats [data-toggle="tooltip"]').tooltip();
+            $('#component-executor-stats [data-toggle="tooltip"]').tooltip();
+            $('#component-errors [data-toggle="tooltip"]').tooltip();
         });
     });
 });
