--- a/storm-core/src/ui/public/component.html
+++ b/storm-core/src/ui/public/component.html
@@ -205,6 +205,9 @@ $(document).ready(function() {
                 });
               });
             }
+            componentErrors.append(Mustache.render($(template).filter("#component-errors-template").html(), response));
+            //time, error
+            dtAutoPage("#component-errors-table", {});
 
             jsError(function() {
               componentErrors.append(Mustache.render($(template).filter("#component-errors-template").html(), response));
