--- a/storm-core/src/ui/public/index.html
+++ b/storm-core/src/ui/public/index.html
@@ -77,7 +77,6 @@ $(document).ready(function() {
       pageLength: 20
     });
 
-
     $.ajaxSetup({
         "error":function(jqXHR,textStatus,response) {
             var errorJson = jQuery.parseJSON(jqXHR.responseText);
@@ -86,6 +85,16 @@ $(document).ready(function() {
             });
         }
     });
+    function jsError(other) {
+      try {
+        other();
+      } catch (err) {
+        $.get("/templates/json-error-template.html", function(template) {
+          $("#json-response-error").append(Mustache.render($(template).filter("#json-error-template").html(),{error: "JS Error", errorMessage: err}));
+        });
+      }
+    }
+
     var uiUser = $("#ui-user");
     var clusterSummary = $("#cluster-summary");
     var topologySummary = $("#topology-summary");
@@ -94,17 +103,22 @@ $(document).ready(function() {
 
     $.getJSON("/api/v1/cluster/summary",function(response,status,jqXHR) {
         $.get("/templates/user-template.html", function(template) {
+          jsError(function() {
             uiUser.append(Mustache.render($(template).filter("#user-template").html(),response));
-            $('#ui-user [data-toggle="tooltip"]').tooltip()
+            $('#ui-user [data-toggle="tooltip"]').tooltip();
+          });
         });
 
         $.get("/templates/index-page-template.html", function(template) {
+          jsError(function() {
             clusterSummary.append(Mustache.render($(template).filter("#cluster-summary-template").html(),response));
             $('#cluster-summary [data-toggle="tooltip"]').tooltip();
+          });
         });
     });
     $.getJSON("/api/v1/topology/summary",function(response,status,jqXHR) {
       $.get("/templates/index-page-template.html", function(template) {
+        jsError(function() {
           topologySummary.append(Mustache.render($(template).filter("#topology-summary-template").html(),response));
           //name, id, owner, status, uptime, num workers, num executors, num tasks, scheduler info
           dtAutoPage("#topology-summary-table", {
@@ -114,10 +128,12 @@ $(document).ready(function() {
             ]
           });
           $('#topology-summary [data-toggle="tooltip"]').tooltip();
+        });
       });
     });
     $.getJSON("/api/v1/supervisor/summary",function(response,status,jqXHR) {
       $.get("/templates/index-page-template.html", function(template) {
+        jsError(function() {
           supervisorSummary.append(Mustache.render($(template).filter("#supervisor-summary-template").html(),response));
           //id, host, uptime, slots, used slots
           dtAutoPage("#supervisor-summary-table", {
@@ -127,15 +143,18 @@ $(document).ready(function() {
             ]
           });
           $('#supervisor-summary [data-toggle="tooltip"]').tooltip();
+        });
       });
     });
     $.getJSON("/api/v1/cluster/configuration",function(response,status,jqXHR) {
-      var formattedResponse = formatConfigData(response);
-      $.get("/templates/index-page-template.html", function(template) {
-        config.append(Mustache.render($(template).filter("#configuration-template").html(),formattedResponse));
-        //key, value
-        dtAutoPage("#nimbus-configuration-table", {});
-        $('#nimbus-configuration [data-toggle="tooltip"]').tooltip();
+      jsError(function() {
+        var formattedResponse = formatConfigData(response);
+        $.get("/templates/index-page-template.html", function(template) {
+          config.append(Mustache.render($(template).filter("#configuration-template").html(),formattedResponse));
+          //key, value
+          dtAutoPage("#nimbus-configuration-table", {});
+          $('#nimbus-configuration [data-toggle="tooltip"]').tooltip();
+        });
       });
     });
   });
